add color in vars.scss

--- a/src/scss/partials/_vars.scss
+++ b/src/scss/partials/_vars.scss
@@ -10,3 +10,8 @@ $container: 1500px;
 $grey:#C8B2BD;
 $darkgrey:#6e6e6e;
 $lightGrey:#F0F2F5;
+$heavenly:#00AFF0;
+$purple:#C32AA3;
+$pink:#EA4C89;
+$orange:#DB4437;
+$midBlue:#3B5998;
